tribe/tribe-apps-manifests/paulo-api/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paulo-api
  namespace: paulo-api
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 0
  selector:
    matchLabels:
      app: paulo-api
  template:
    metadata:
      labels:
        version: v1
        app: paulo-api
    spec:
      containers:
      - name: paulo-api
        image: >-
          142401413602.dkr.ecr.sa-east-1.amazonaws.com/ecr-flask-api-example:paulo-teste-newrelic-d8c1d03aba6b660c9ecd7d9c3725beaa60b9bb1e
        # 142401413602.dkr.ecr.sa-east-1.amazonaws.com/ecr-flask-api-example:paulo-teste-newrelic-b50a71d77e56696ded86abb0d08d6a6796d2dc1e
        #v2: 142401413602.dkr.ecr.sa-east-1.amazonaws.com/ecr-flask-api-example:paulo-teste-newrelic-d98d1b6fc15df3cd1830d459db01e1c584d0113c
        #v1: 142401413602.dkr.ecr.sa-east-1.amazonaws.com/ecr-flask-api-example:paulo-teste-newrelic-b50a71d77e56696ded86abb0d08d6a6796d2dc1e
        livenessProbe:
          httpGet:
            path: /appVersion
            port: 8000        
          initialDelaySeconds: 20
        readinessProbe:
          httpGet:
            path: /appVersion
            port: 8000        
          initialDelaySeconds: 20                
        ports:
          - name: http
            containerPort: 8000
            protocol: TCP
        resources:
          limits:
            cpu: 500m
            memory: 300Mi
          requests:
            cpu: 250m
            memory: 200Mi
        imagePullPolicy: IfNotPresent
        # volumeMounts:
        # - name: persistent-storage
        #   mountPath: /app
      restartPolicy: Always
      serviceAccountName: paulo-api
      serviceAccount: paulo-api
      dnsPolicy: ClusterFirst
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 20%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
      # volumes:
      # - name: persistent-storage
      #   persistentVolumeClaim:
      #     claimName: paulo-api-pvc
