tribe/tribe-apps-manifests/paulo-api/RollOut.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: paulo-api
  namespace: paulo-api
  annotations:
    reloader.stakater.com/auto: "true"
  labels:
    app: paulo-api
spec:
  replicas: 2
  workloadRef:
    apiVersion: apps/v1
    kind: Deployment
    name: paulo-api
  strategy:
    canary:
      steps:
        - setWeight: 20
        - pause:
            duration: 30
        - setWeight: 40
        - pause:
            duration: 30
        - setWeight: 60
        - pause:
            duration: 30
        - setWeight: 80
        - pause:
            duration: 30
